--- a/semana02/dia02-reto2/styles.css
+++ b/semana02/dia02-reto2/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+/*@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');*/
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 /*
@@ -7,45 +7,45 @@
 */
 
 body {
-  background-color: hsl(30, 38%, 92%);
-  font-size: 14px;
-  font-family: 'Roboto';
-
+  background-color: hsl(235, 18%, 26%);
+  font-size: 16px;
+  font-family: 'Roboto', sans-serif;
   height: 100vh; /* Viewport Height - alto de lo visible pantalla*/
-
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 main {
-  /* background-color: red; */
-  width: 650px;
+  
+  width: 1440px;
   min-height: 400px;
-
   display: flex;
-}
+  justify-content: center;
+ }
 
 .photo {
-  background-color: blue;
-  /* width: 50%; */
-  width: 350px;
+  background-color: hsl(0, 0%, 100%);
+  width: 400px;
   background-image: url(./images/image-product-desktop.jpg);
   background-size: cover;
   background-repeat: no-repeat;
 
-  border-radius: 14px 0 0 14px;
-  box-shadow: 1px 1px 3px #ccc;
+  border-radius: 0 14px 14px 0;
+  
+  padding: 30px;
 }
 
 .content {
   background-color: hsl(0, 0%, 100%);
+  font-size: 16px;
   /* width: 50%; */
-  width: 300px;
-  padding: 28px;
+  width: 400px;
+  padding: 50px;
+  text-align: justify;
 
-  border-radius: 0 14px 14px 0;
-  box-shadow: 1px 1px 3px #ccc;
+  border-radius: 14px 0 0 14px;
+  
 }
 
 .content h3 {
@@ -58,13 +58,12 @@ main {
 
 .content h1 {
   font-family: 'Roboto', sans-serif;
-  font-weight: 700;
   font-size: 32px;
   color: hsl(212, 21%, 14%);
 }
 
 .content p {
-  color: hsl(228, 12%, 48%);
+  color: hsl(212, 21%, 14%);
   font-weight: 500;
   line-height: 1.5;
 }
@@ -76,21 +75,19 @@ main {
 }
 
 .content span {
-  font-family: 'Fraunces', serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 32px;
   font-weight: 700;
   color: hsl(158, 36%, 37%);
 }
 
-.content s {
-  color: hsl(228, 12%, 48%);
-}
+
 
 .content button {
   border: 0;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-weight: 700;
-  background-color: hsl(158, 36%, 37%);
+  background-color: hsl(234, 29%, 20%);
   color: hsl(0, 0%, 100%);
   padding: 14px;
   width: 100%;
@@ -103,5 +100,14 @@ main {
 }
 
 .content button:hover {
-  background-color: hsl(158, 52%, 20%);
+  background-color: hsl(4, 100%, 67%);
+}
+
+.content ul {
+  list-style-image: url(./assets/images/icon-list.svg);
+  list-style-type: none;
+  display:block;
+  text-align: justify;
+  float:none;
+  
 }
