--- a/semana03/dia01-modelo-de-cajafylo-dark-theme-landing-page-master/fylo-dark-theme-landing-page-master/css/index.css
+++ b/semana03/dia01-modelo-de-cajafylo-dark-theme-landing-page-master/fylo-dark-theme-landing-page-master/css/index.css
@@ -50,11 +50,14 @@ a{
 }
 
 img{
-    /*TODO: RWD Para imagenes*/
+    /*TODO: RWD Para imagenes- adaptativa*/
+    max-width: 100%;
+    height: auto;
 }
 
 .wrapper{
-    width: 1440px;
+    /*width: 1440px;*/
+    width: min(100% -3rem 1440px); /*adaptamos la pantalla para dispositivos moviles en header*/
     /*TODO: Adaptar el ancho de la pagina a dispositivos móviles*/
 }
 
@@ -76,22 +79,30 @@ img{
     gap: 3rem;/* 1rem = 14px (html - font size )*/
 }
 .hero{
-   /* border: 1px solid red;*/
+    /*border: 1px solid red;*/
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 2rem;
     padding-top: 3rem;
     padding-bottom: 12rem;
+    background: url(../images/bg-curvy-desktop.svg);
+    background-repeat: no-repeat;
+    background-position: bottom;
+    /*background-color: red;*/
+    background-size: contain;
 }
 .hero__title {
-    width: 720px;
+    /*width: 720px;*/
+    width: min(100% -3rem 720px);
     font-family: var(--font-primary);
     font-weight: var(--font-weight-bold);
+    font-size: 2.5rem;
     text-align: center;
 }
 .hero__text {
-    width: 720px;
+    /*width: 720px;*/
+    width: min(100% -3rem 720px);
     font-family: var(--font-secondary);
     font-size: 1.2rem;
     padding: 0 7rem;
@@ -100,10 +111,11 @@ img{
 .hero__button{
     font-family: var(--font-primary);
     font-weight: var(--font-weight-bold);
-    border: 0;
+    border: none;
     border-radius: 7rem;
     padding: 1rem 1.5rem;
     min-width: 220px;
+    color: var(--neutral-white);
     background: 
     linear-gradient(
         90deg,
@@ -118,4 +130,187 @@ img{
     justify-content: center;
     gap: 5rem;
     background-color: var(--primary-dark-blue-main);
+}
+
+.feature{
+    /*text-align: center;*/
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+}
+.feature__title{
+    font-family: var(--font-primary);
+   /* border: 1px solid red;*/
+    /*margin-top: 1.3rem;*/
+}
+.feature__text{
+    /*border: 1px solid green;*/
+    font-family: var(--font-secondary);
+    text-align: center;
+   /* margin-top: 1rem;*/
+}
+.collaboration{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 4rem;
+    background-color: var(--primary-dark-blue-main);
+    padding-top: 8rem;
+}
+
+.how_works{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    width: 30rem;
+}
+.how_works__title{
+    font-family: var(--font-primary);
+    font-weight: var(--font-weight-bold);
+    font-size: 2.5rem;
+}
+.how_works__text{
+    font-family: var(--font-secondary);
+}
+.how_works__button{
+    font-family: var(--font-secondary);
+    color: var(--accent-cyan);
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    border-bottom: 1px solid var(--accent-cyan);
+    /*margin-right: auto;*/
+    width: 10.8rem;
+    padding-bottom: 0.5rem; /*0.5rem=7px, ya que el tamaño general definido es de 14px*/
+
+}
+.testimonials{
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+    /*font-family: var(--font-primary);*/
+    padding-top: 8rem;
+    background-color: var(--primary-dark-blue-main);
+    margin-bottom: ;
+}
+.testimonial{
+    background-color: var(--primary-dark-blue-testimonials);
+    padding: 2rem 1.5rem 1.5rem 1.5rem;
+    font-family: var(--font-primary);
+}
+.testimonial__text{
+   margin-bottom: 2rem;
+   line-height: 1.5;/*interlineado*/
+   width: 21rem;
+}
+.testimonial__profile{
+    display: flex;
+    gap: .5rem;
+    font-size: .8rem;
+    
+}
+.testimonial__profile img{
+    border-radius: 50px;
+}
+/*
+.testimonial__profile h4,
+.testimonial__profile h5{
+    font-weight: var(--font-weight-regular);
+}
+*/
+.testimonial__profile h4{
+    font-weight: var(--font-weight-bold);
+}
+.testimonial__profile h5{
+    font-weight: var(--font-weight-regular);
+}
+.early-access{
+    border: 1px solid red;
+    font-family: var(--font-primary);
+    width: 53rem;
+    padding: 2rem;
+
+    background-color: var(--primary-dark-blue-testimonials);
+    border-radius: 1rem;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1.5rem;
+
+    position: absolute;
+    top: 0;
+    left: 50%;
+
+}
+
+.early-access h2{
+    font-size: 2rem;
+}
+.early-access p{
+    text-align: center;
+}
+.early-access input[type=text]{
+    border-radius: 1.5rem;
+    border: none;
+    padding: 1rem 2rem;
+    width: 30rem;
+}
+.early-access input[type=submit]{
+    font-family: var(--font-primary);
+    font-weight: var(--font-weight-bold);
+    border: none;
+    border-radius: 7rem;
+    padding: 1rem 1.5rem;
+    min-width: 120px;
+    color: var(--neutral-white);
+    background: 
+    linear-gradient(
+        90deg,
+        var(--accent-cyan) 0%,
+        var(--accent-blue) 35%
+    )
+    ;
+}
+
+.footer{
+    font-family: var(--font-primary);
+    background-color: var(--primary-dark-blue-footer);
+    padding: 15rem 0 5rem 0;
+
+}
+.footer--wrapper{
+    /*border: 1px solid yellow;*/
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 2rem;
+    width: 76rem;
+    margin: 0 auto;
+}
+.footer-info{
+    display: flex;
+    gap: 4rem;
+}
+
+.footer-info__description{
+    width: 22rem;
+    display: flex;
+    align-items: flex-start;
+    gap: 1.5rem;
+}
+.footer-info__contact{
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+}
+.footer-info__contact span{
+    display: flex;
+    gap: 1rem;
+}
+.footer-info__links{
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
 }
