--- a/semana03/dia01-modelo-de-cajafylo-dark-theme-landing-page-master/fylo-dark-theme-landing-page-master/css/index.css
+++ b/semana03/dia01-modelo-de-cajafylo-dark-theme-landing-page-master/fylo-dark-theme-landing-page-master/css/index.css
@@ -1,316 +1,411 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400; 700&familia=Raleway:wght@400; 700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Raleway:wght@400;700&display=swap');
 
 /*
-font-family: 'Open Sans', sans-serif;
-font-family: 'Raleway', sans-serif;
+  font-family: 'Open Sans', sans-serif;
+  font-family: 'Raleway', sans-serif;
 */
-/*nos ayudamos con la creacion de variables, para reutilizarlas en el codigo que sigue*/
-:root{
-    /*FONTS*/
-    --color: yellow;
-    --font-primary: 'Raleway', sans-serif;
-    --font-secondary: 'Open Sans', sans-serif;
-    --font-size: 14px;
-    --font-weight-regular: 400;
-    --font-weight-bold: 700;
-    
-    /*COLORS*/
-    
-    --primary-dark-blue-intro: hsl(217, 28%, 15%);
-    --primary-dark-blue-main: hsl(218, 28%, 13%);
-    --primary-dark-blue-footer: hsl(216, 53%, 9%);
-    --primary-dark-blue-testimonials: hsl(219, 30%, 18%);
 
-    --accent-cyan: hsl(176, 68%, 64%);
-    --accent-blue: hsl(198, 60%, 50%);
-    --accent-red: hsl(0, 100%, 63%);
+:root {
+  /* FONTS */
+  --color: yellow;
+  --font-primary: 'Raleway', sans-serif;
+  --font-secondary: 'Open Sans', sans-serif;
+  --font-size: 14px;
+  --font-weight-regular: 400;
+  --font-weight-bold: 700;
 
-    --neutral-white: hsl(0, 0%, 100%);
+  /* COLORS */
+
+  --primary-dark-blue-intro: hsl(217, 28%, 15%);
+  --primary-dark-blue-main: hsl(218, 28%, 13%);
+  --primary-dark-blue-footer: hsl(216, 53%, 9%);
+  --primary-dark-blue-testimonials: hsl(219, 30%, 18%);
+
+  --accent-cyan: hsl(176, 68%, 64%);
+  --accent-blue: hsl(198, 60%, 50%);
+  --accent-light-red: hsl(0, 100%, 63%);
+
+  --neutral-white: hsl(0, 0%, 100%);
 }
 
-/*RESETs para homogenizar los navegadores y no tener problemas de soporte de algunas propiedades entre navegadores*/
-   
-    *{
-        box-sizing: border-box;
-        margin: 0;
-    }
+/* RESETs */
 
-html{
-    font-size: var(--font-size);
+* {
+  box-sizing: border-box;
+  margin: 0;
 }
 
-body{
-    background-color: var(--primary-dark-blue-intro);
-    color: var(--neutral-white);
+html {
+  font-size: var(--font-size);
 }
 
-a{
-    color: inherit;/*hereda el color del padre que es body*/
-    text-decoration: none; /*quita el subrayado a los enlaces*/
+body {
+  background-color: var(--primary-dark-blue-intro);
+  color: var(--neutral-white);
 }
 
-img{
-    /*TODO: RWD Para imagenes- adaptativa*/
-    max-width: 100%;
-    height: auto;
+a {
+  color: inherit;
+  text-decoration: none;
 }
 
-.wrapper{
-    /*width: 1440px;*/
-    width: min(100% -3rem 1440px); /*adaptamos la pantalla para dispositivos moviles en header*/
-    /*TODO: Adaptar el ancho de la pagina a dispositivos móviles*/
+img {
+  /* TODO: RWD para imágenes */
+  max-width: 100%;
+  height: auto;
 }
 
-.header{
-    /*border: 1px solid red;*/
-    font-family: var(--font-primary);
-    margin: 0 auto; /*margen superior e inferior =0 y margen derecho e izquierdo=automatico*/
-    display: flex;
-    justify-content: space-between; /*separa el logo de los enlaces*/
-    margin-top: 3rem;
+.wrapper {
+  /* width: 1440px; */
+  /* TODO: Adaptar el ancho de la página a dispositivos móviles */
+  width: min(100% - 3rem, 1440px);
+}
 
+.header {
+  /* border: 1px solid red; */
+
+  font-family: var(--font-primary);
+  margin: 0 auto;
+
+  display: flex;
+  justify-content: space-between;
+
+  margin-top: 3rem;
 }
-.header--nav{
-    /*border: 1px solid yellow;*/
-    list-style: none;
-    padding: 10px;
-    margin: 10px;
-    display: flex;
-    gap: 3rem;/* 1rem = 14px (html - font size )*/
+
+.header__nav {
+  /* border: 1px solid yellow; */
+
+  list-style: none;
+  padding: 10px;
+  margin: 10px;
+
+  display: flex;
+  gap: 3rem; /* 1rem = 14px (html) */
 }
-.hero{
-    /*border: 1px solid red;*/
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 2rem;
-    padding-top: 3rem;
-    padding-bottom: 12rem;
-    background: url(../images/bg-curvy-desktop.svg);
-    background-repeat: no-repeat;
-    background-position: bottom;
-    /*background-color: red;*/
-    background-size: contain;
+
+.hero {
+  /* border: 1px solid red; */
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+
+  padding-top: 3rem;
+  padding-bottom: 12rem;
+
+  background-image: url(../images/bg-curvy-desktop.svg);
+  background-repeat: no-repeat;
+  background-position: bottom;
+  background-size: contain;
 }
+
 .hero__title {
-    /*width: 720px;*/
-    width: min(100% -3rem 720px);
-    font-family: var(--font-primary);
-    font-weight: var(--font-weight-bold);
-    font-size: 2.5rem;
-    text-align: center;
+  /* width: 720px; */
+  width: min(100% - 3rem, 720px);
+
+  font-family: var(--font-primary);
+  font-weight: var(--font-weight-bold);
+  font-size: 2.5rem;
+
+  text-align: center;
 }
+
 .hero__text {
-    /*width: 720px;*/
-    width: min(100% -3rem 720px);
-    font-family: var(--font-secondary);
-    font-size: 1.2rem;
-    padding: 0 7rem;
-    text-align: center;
-}
-.hero__button{
-    font-family: var(--font-primary);
-    font-weight: var(--font-weight-bold);
-    border: none;
-    border-radius: 7rem;
-    padding: 1rem 1.5rem;
-    min-width: 220px;
-    color: var(--neutral-white);
-    background: 
-    linear-gradient(
-        90deg,
-        var(--accent-cyan) 0%,
-        var(--accent-blue) 35%
-    )
-    ;
-}
-.features{
-    display: grid;
-    grid-template-columns: 340px 340px;
-    justify-content: center;
-    gap: 5rem;
-    background-color: var(--primary-dark-blue-main);
+  /* width: 720px; */
+  width: min(100% - 3rem, 720px);
+
+  font-family: var(--font-secondary);
+  font-size: 1.2rem;
+  padding: 0 7rem;
+
+  text-align: center;
 }
 
-.feature{
-    /*text-align: center;*/
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 1rem;
-}
-.feature__title{
-    font-family: var(--font-primary);
-   /* border: 1px solid red;*/
-    /*margin-top: 1.3rem;*/
-}
-.feature__text{
-    /*border: 1px solid green;*/
-    font-family: var(--font-secondary);
-    text-align: center;
-   /* margin-top: 1rem;*/
-}
-.collaboration{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 4rem;
-    background-color: var(--primary-dark-blue-main);
-    padding-top: 8rem;
-}
-
-.how_works{
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    width: 30rem;
-}
-.how_works__title{
-    font-family: var(--font-primary);
-    font-weight: var(--font-weight-bold);
-    font-size: 2.5rem;
-}
-.how_works__text{
-    font-family: var(--font-secondary);
-}
-.how_works__button{
-    font-family: var(--font-secondary);
-    color: var(--accent-cyan);
-    display: flex;
-    align-items: center;
-    gap: 0.5rem;
-    border-bottom: 1px solid var(--accent-cyan);
-    /*margin-right: auto;*/
-    width: 10.8rem;
-    padding-bottom: 0.5rem; /*0.5rem=7px, ya que el tamaño general definido es de 14px*/
-
-}
-.testimonials{
-    display: flex;
-    justify-content: center;
-    gap: 2rem;
-    /*font-family: var(--font-primary);*/
-    padding-top: 8rem;
-    background-color: var(--primary-dark-blue-main);
-    margin-bottom: ;
-}
-.testimonial{
-    background-color: var(--primary-dark-blue-testimonials);
-    padding: 2rem 1.5rem 1.5rem 1.5rem;
-    font-family: var(--font-primary);
-}
-.testimonial__text{
-   margin-bottom: 2rem;
-   line-height: 1.5;/*interlineado*/
-   width: 21rem;
-}
-.testimonial__profile{
-    display: flex;
-    gap: .5rem;
-    font-size: .8rem;
-    
-}
-.testimonial__profile img{
-    border-radius: 50px;
-}
 /*
-.testimonial__profile h4,
-.testimonial__profile h5{
-    font-weight: var(--font-weight-regular);
-}
+576px -> pantallas pequeñas (celulares)
+768px -> pantallas pequeñas (tablets y celulares)
+992px -> pantallas medianas (Desktop)
+1200px -> pantallas grandes (Desktops, TVs)
 */
-.testimonial__profile h4{
-    font-weight: var(--font-weight-bold);
-}
-.testimonial__profile h5{
-    font-weight: var(--font-weight-regular);
-}
-.early-access{
-    border: 1px solid red;
-    font-family: var(--font-primary);
-    width: 53rem;
-    padding: 2rem;
 
-    background-color: var(--primary-dark-blue-testimonials);
-    border-radius: 1rem;
-
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 1.5rem;
-
-    position: absolute;
-    top: 0;
-    left: 50%;
-
+@media (max-width: 768px) {
+  .hero__text {
+    padding: 0;
+  }
 }
 
-.early-access h2{
-    font-size: 2rem;
-}
-.early-access p{
-    text-align: center;
-}
-.early-access input[type=text]{
-    border-radius: 1.5rem;
-    border: none;
-    padding: 1rem 2rem;
-    width: 30rem;
-}
-.early-access input[type=submit]{
-    font-family: var(--font-primary);
-    font-weight: var(--font-weight-bold);
-    border: none;
-    border-radius: 7rem;
-    padding: 1rem 1.5rem;
-    min-width: 120px;
-    color: var(--neutral-white);
-    background: 
+.hero__button {
+  font-family: var(--font-primary);
+  font-weight: var(--font-weight-bold);
+  border: none;
+  border-radius: 7rem;
+  padding: 1rem 1.5rem;
+  min-width: 220px;
+  color: var(--neutral-white);
+  background:
     linear-gradient(
-        90deg,
-        var(--accent-cyan) 0%,
-        var(--accent-blue) 35%
+      90deg,
+      var(--accent-cyan) 0%,
+      var(--accent-blue) 35%
     )
-    ;
+  ;
 }
 
-.footer{
-    font-family: var(--font-primary);
-    background-color: var(--primary-dark-blue-footer);
-    padding: 15rem 0 5rem 0;
-
-}
-.footer--wrapper{
-    /*border: 1px solid yellow;*/
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 2rem;
-    width: 76rem;
-    margin: 0 auto;
-}
-.footer-info{
-    display: flex;
-    gap: 4rem;
+.features {
+  display: grid;
+  grid-template-columns: 340px 340px;
+  justify-content: center;
+  gap: 5rem;
+  background-color: var(--primary-dark-blue-main);
 }
 
-.footer-info__description{
-    width: 22rem;
-    display: flex;
-    align-items: flex-start;
-    gap: 1.5rem;
+@media (max-width: 768px) { /* SE APLICA A DISPOSITIVOS COMO TABLES Y CELULARES */
+  .features {
+    grid-template-columns: 340px;
+  }
 }
-.footer-info__contact{
-    display: flex;
+
+.feature {
+  /* text-align: center; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+}
+
+.feature__title {
+  /* border: 1px solid red; */
+  font-family: var(--font-primary);
+  /* margin-top: 1.3rem; */
+}
+
+.feature__text {
+  /* border: 1px solid green; */
+  font-family: var(--font-secondary);
+  text-align: center;
+  /* margin-top: 1rem; */
+}
+
+.collaboration {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 4rem;
+
+  background-color: var(--primary-dark-blue-main);
+
+  padding-top: 8rem;
+}
+
+@media (max-width: 768px) { /* SE APLICA A DISPOSITIVOS COMO TABLES Y CELULARES */
+  .collaboration {
     flex-direction: column;
-    gap: 1.5rem;
+  }
 }
-.footer-info__contact span{
-    display: flex;
-    gap: 1rem;
+
+.how_works {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  width: 30rem;
 }
-.footer-info__links{
-    display: flex;
+
+.how_works__title {
+  font-family: var(--font-primary);
+  font-weight: var(--font-weight-bold);
+  font-size: 2.5rem;
+}
+
+.how_works__text {
+  font-family: var(--font-secondary);
+}
+
+.how_works__button {
+  font-family: var(--font-secondary);
+  color: var(--accent-cyan);
+
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+
+  border-bottom: 1px solid var(--accent-cyan);
+  /* margin-right: auto; */
+  width: 10.8rem;
+  padding-bottom: 0.5rem; /* 0.5rem = 7px */
+}
+
+.testimonials {
+  background-color: var(--primary-dark-blue-main);
+
+  display: flex;
+  justify-content: center;
+  gap: 2rem;
+
+  padding-top: 8rem;
+  padding-bottom: 18rem;
+}
+
+@media (max-width: 768px) { /* SE APLICA A DISPOSITIVOS COMO TABLES Y CELULARES */
+  .testimonials {
     flex-direction: column;
-    gap: 2rem;
+  }
+}
+
+.testimonial {
+  background-color: var(--primary-dark-blue-testimonials);
+
+  padding: 2rem 1.5rem 1.5rem 1.5rem;
+
+  font-family: var(--font-primary);
+}
+
+.testimonial__text {
+  margin-bottom: 2rem;
+  line-height: 1.5;
+  width: 21rem;
+}
+
+.testimonial__profile {
+  display: flex;
+  gap: .5rem;
+
+  font-size: .8rem;
+}
+
+.testimonial__profile img {
+  border-radius: 50px;
+}
+
+.testimonial__profile h4 {
+  font-weight: var(--font-weight-bold);
+}
+
+.testimonial__profile h5 {
+  font-weight: var(--font-weight-regular);
+}
+
+.early-access {
+  /* border: 1px solid red; */
+
+  font-family: var(--font-primary);
+  width: 53rem;
+  padding: 2rem;
+
+  background-color: var(--primary-dark-blue-testimonials);
+  border-radius: 1rem;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1.5rem;
+
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.early-access h2 {
+  font-size: 2rem;
+}
+
+.early-access p {
+  text-align: center;
+}
+
+.early-access form {
+  display: flex;
+  gap: 2rem;
+}
+
+@media (max-width: 768px) { /* SE APLICA A DISPOSITIVOS COMO TABLES Y CELULARES */
+  .early-access {
+    width: 100%;
+  }
+
+  .early-access form  {
+    flex-direction: column;
+  }
+}
+
+.early-access input[type=text] {
+  border-radius: 1.5rem;
+  border: none;
+  padding: 1rem 2rem;
+  width: 30rem;
+}
+
+.early-access input[type=submit] {
+  font-family: var(--font-primary);
+  font-weight: var(--font-weight-bold);
+  border: none;
+  border-radius: 7rem;
+  padding: 1rem 1.5rem;
+  min-width: 120px;
+  color: var(--neutral-white);
+  background:
+    linear-gradient(
+      90deg,
+      var(--accent-cyan) 0%,
+      var(--accent-blue) 35%
+    )
+  ;
+}
+
+.footer {
+  font-family: var(--font-primary);
+  background-color: var(--primary-dark-blue-footer);
+  padding: 15rem 0 5rem 0;
+
+  position: relative;
+}
+
+.footer--wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 2rem;
+  width: 76rem;
+  margin: 0 auto;
+}
+
+.footer-info {
+  display: flex;
+  gap: 4rem;
+
+  width: 100%;
+  justify-content: space-between;
+}
+
+@media (max-width: 768px) { /* SE APLICA A DISPOSITIVOS COMO TABLES Y CELULARES */
+  .footer-info {
+    flex-direction: column;
+  }
+}
+
+.footer-info__description {
+  width: 22rem;
+
+  display: flex;
+  align-items: flex-start;
+  gap: 1.5rem;
+}
+
+.footer-info__contact {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+
+.footer-info__contact span {
+ display: flex;
+ gap: 1rem;
+}
+
+.footer-info__links {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
 }
