semana 4 mas maqueteo

--- a/semana03/dia01-modelo-de-cajafylo-dark-theme-landing-page-master/fylo-dark-theme-landing-page-master/css/index.css
+++ b/semana03/dia01-modelo-de-cajafylo-dark-theme-landing-page-master/fylo-dark-theme-landing-page-master/css/index.css
@@ -49,6 +49,12 @@ a {
   text-decoration: none;
 }
 
+a:hover{
+  /*color: red;*/
+  font-weight: var(--font-weight-bold);
+  text-decoration: underline;
+}
+
 img {
   /* TODO: RWD para imágenes */
   max-width: 100%;
